Removes warnings about unused variables